[gd_scene load_steps=6 format=2]

[ext_resource path="res://characters/players/viking/assets/Ice Spikes-Sheet.png" type="Texture" id=1]
[ext_resource path="res://characters/enemies/final_boss/giga-omi/scripts/Stomp.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.219608, 0.2, 0.270588, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "stomp"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.219608, 0.2, 0.270588, 1 ), Color( 0.219608, 0.2, 0.270588, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 12.875, 5 )

[node name="StompParanoia" type="Area2D"]
scale = Vector2( 8, 8 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.219608, 0.2, 0.270588, 1 )
position = Vector2( 0, -12 )
texture = ExtResource( 1 )
hframes = 8

[node name="Animation" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite")
anims/RESET = SubResource( 1 )
anims/stomp = SubResource( 2 )

[node name="LeftSpikes" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -34.625, -5 )
shape = SubResource( 3 )

[node name="RightSpikes" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 34.625, -5 )
shape = SubResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_StompParanoia_body_entered"]
[connection signal="animation_finished" from="Animation" to="." method="_on_Animation_animation_finished"]
